# tree-cli

./: Cargo.toml  LICENSE  README.md
config/: config.toml
src/: core.rs  file_iterator.rs  filter.rs  main.rs  pojo.rs  symbol.rs
tests/: test.rs
